--- a/res/layout/ad_dialog.xml
+++ b/res/layout/ad_dialog.xml
@@ -28,6 +28,12 @@
             android:textSize="17sp" />
     </LinearLayout>
 
+    <com.appflood.AFBannerView
+        android:id="@+id/banner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
+
     <View
         android:layout_width="fill_parent"
         android:layout_height="0.06dp"
