--- a/res/layout/game_detail_all.xml
+++ b/res/layout/game_detail_all.xml
@@ -297,7 +297,7 @@
             android:layout_alignParentLeft="true" >
 
             <Button
-                android:id="@+id/download"
+                android:id="@+id/btn_gamedetail_download"
                 android:layout_width="fill_parent"
                 android:layout_height="40dp"
                 android:layout_alignParentBottom="true"
