--- a/res/layout/start_page.xml
+++ b/res/layout/start_page.xml
@@ -4,14 +4,12 @@
     android:layout_height="match_parent"
     android:background="@color/white"
      >
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView 
+        android:layout_width="300dp"
+        android:layout_height="120dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginTop="30dp"
-        android:text="@string/game_starting"
-        android:textColor="@color/orange_default"
-        android:textSize="30sp"
+        android:background="@drawable/open_slogan"   
         />
 </RelativeLayout>
