--- a/res/layout/featured_game_item.xml
+++ b/res/layout/featured_game_item.xml
@@ -13,7 +13,7 @@
         android:id="@+id/iv_featured_games_icon"
         android:layout_width="53dip"
         android:layout_height="53dip"
-        android:background="@drawable/icon" >
+        android:background="@drawable/list_default_icon" >
     </ImageView>
 
     <LinearLayout
