--- a/res/layout/game_detail_all.xml
+++ b/res/layout/game_detail_all.xml
@@ -69,7 +69,7 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/icon" />
+                        android:background="@drawable/list_default_icon" />
 
                     <LinearLayout
                         android:id="@+id/linearLayout2"
