--- a/res/layout/featured_game_item.xml
+++ b/res/layout/featured_game_item.xml
@@ -26,10 +26,12 @@
 
         <TextView
             android:id="@+id/tv_game_name"
-            android:layout_width="wrap_content"
+            android:layout_width="170dp"
             android:layout_height="wrap_content"
             android:text="@string/test_game_name_short"
             android:textColor="@color/black"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textSize="15dp" />
 
         <FrameLayout
