--- a/res/layout/featured_game_item.xml
+++ b/res/layout/featured_game_item.xml
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:visibility="visible" >
+                android:visibility="invisible" >
 
                 <TextView
                     android:id="@+id/tv_featured_game_type"
@@ -73,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:visibility="invisible"
+                android:visibility="visible"
                  >
 
                 <ProgressBar
@@ -86,7 +86,16 @@
                     android:max="100"
                     android:progress="100"
                     android:secondaryProgress="100" />
-
+               
+                <TextView 
+                    android:id="@+id/tv_progress_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="1dp"
+                    android:textSize="12sp"
+                    android:textColor="@color/gray" 
+                    />
                 <ImageButton
                     android:id="@+id/ib_download_cancel"
                     android:layout_width="20sp"
